@@ -1,5 +1,5 @@
 dnl Check for LIBSSL compiler flags. On success, set nut_have_libssl="yes"
-dnl and set NUT_LIBSSL_CFLAGS and NUT_LIBSSL_LDFLAGS. On failure, set
+dnl and set LIBSSL_CFLAGS and LIBSSL_LDFLAGS. On failure, set
 dnl nut_have_libssl="no". This macro can be run multiple times, but will
 dnl do the checking only once. 
 
@@ -13,32 +13,32 @@ if test -z "${nut_have_libssl_seen}"; then
    CFLAGS_ORIG="${CFLAGS}"
    LDFLAGS_ORIG="${LDFLAGS}"
 
-   NUT_LIBSSL_CFLAGS=""
-   NUT_LIBSSL_LDFLAGS="-lssl -lcrypto"
+   LIBSSL_CFLAGS=""
+   LIBSSL_LDFLAGS="-lssl -lcrypto"
 
-   CFLAGS="${NUT_LIBSSL_CFLAGS}"
-   LDFLAGS="${NUT_LIBSSL_LDFLAGS}"
+   CFLAGS="${LIBSSL_CFLAGS}"
+   LDFLAGS="${LIBSSL_LDFLAGS}"
    AC_TRY_LINK([#include <openssl/ssl.h>], [SSL_library_init()], 
 	       nut_have_libssl=yes, 
 	       nut_have_libssl=no)
 
    if test "${nut_have_libssl}" != "yes"; then
-      NUT_LIBSSL_CFLAGS="-I/usr/local/ssl/include"
-      NUT_LIBSSL_LDFLAGS="-L/usr/local/ssl/lib -lssl -lcrypto"
+      LIBSSL_CFLAGS="-I/usr/local/ssl/include"
+      LIBSSL_LDFLAGS="-L/usr/local/ssl/lib -lssl -lcrypto"
 
-      CFLAGS="${NUT_LIBSSL_CFLAGS}"
-      LDFLAGS="${NUT_LIBSSL_LDFLAGS}"
+      CFLAGS="${LIBSSL_CFLAGS}"
+      LDFLAGS="${LIBSSL_LDFLAGS}"
       AC_TRY_LINK([#include <openssl/ssl.h>], [SSL_library_init], 
                   nut_have_libssl=yes, 
 		  nut_have_libssl=no)
    fi
 
    if test "${nut_have_libssl}" != "yes"; then
-      NUT_LIBSSL_CFLAGS="-I/usr/local/ssl/include -I/usr/kerberos/include"
-      NUT_LIBSSL_LDFLAGS="-L/usr/local/ssl/lib -lssl -lcrypto"
+      LIBSSL_CFLAGS="-I/usr/local/ssl/include -I/usr/kerberos/include"
+      LIBSSL_LDFLAGS="-L/usr/local/ssl/lib -lssl -lcrypto"
 
-      CFLAGS="${NUT_LIBSSL_CFLAGS}"
-      LDFLAGS="${NUT_LIBSSL_LDFLAGS}"
+      CFLAGS="${LIBSSL_CFLAGS}"
+      LDFLAGS="${LIBSSL_LDFLAGS}"
       AC_TRY_LINK([#include <openssl/ssl.h>], [SSL_library_init], 
                    nut_have_libssl=yes, 
 		   nut_have_libssl=no)
